example/08-volume/0_blog/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  labels:
    app: blog
spec:
  selector:
    matchLabels:
      app: blog
      tier: mysql
  replicas: 1
  template:
    metadata:
      name: mysql-pod
      labels:
        app: blog
        tier: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
