example/08-volume/0_blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: wordpress-ingress
spec:
  rules:
  - host: blog.140-110-136-74.nip.io
    http:
      paths:
      - backend:
          service:
            name: wordpress-svc
            port:
              number: 7070
        pathType: ImplementationSpecific
